src/kube/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    app.quarkus.io/build-timestamp: '2020-08-15 - 18:21:59 +0000'
    app.quarkus.io/commit-id: 6e0cb83417ed81b4aff7d8a9148357ab2062df87
    app.quarkus.io/vcs-url: 'https://github.com/sebastienblanc/millionaire-backend.git'
    deployment.kubernetes.io/revision: '27'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"app.quarkus.io/build-timestamp":"2020-08-15
      - 18:21:59
      +0000","app.quarkus.io/commit-id":"6e0cb83417ed81b4aff7d8a9148357ab2062df87","app.quarkus.io/vcs-url":"https://github.com/sebastienblanc/millionaire-backend.git"},"labels":{"app.kubernetes.io/name":"millionaire-backend","app.kubernetes.io/version":"1.0-SNAPSHOT"},"name":"millionaire-backend","namespace":"thegame"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/name":"millionaire-backend","app.kubernetes.io/version":"1.0-SNAPSHOT"}},"template":{"metadata":{"annotations": [...]
      - 18:21:59
      +0000","app.quarkus.io/commit-id":"6e0cb83417ed81b4aff7d8a9148357ab2062df87","app.quarkus.io/vcs-url":"https://github.com/sebastienblanc/millionaire-backend.git"},"labels":{"app.kubernetes.io/name":"millionaire-backend","app.kubernetes.io/version":"1.0-SNAPSHOT"}},"spec":{"containers":[{"env":[{"name":"KUBERNETES_NAMESPACE","valueFrom":{"fieldRef":{"fieldPath":"metadata.namespace"}}}],"image":"sebi2706/millionaire-backend:1.0-SNAPSHOT","imagePullPolicy":"IfNotPresent","name":"millionaire-b [...]
  selfLink: /apis/apps/v1/namespaces/thegame/deployments/millionaire-backend
  resourceVersion: '3359537'
  name: millionaire-backend
  uid: 3db0ce2a-b2a5-404d-988c-fe168bb7947e
  creationTimestamp: '2020-08-16T06:02:49Z'
  generation: 55
  namespace: thegame
  labels:
    app.kubernetes.io/name: millionaire-backend
    app.kubernetes.io/version: 1.0-SNAPSHOT
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: millionaire-backend
      app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: millionaire-backend
        app.kubernetes.io/version: 1.0-SNAPSHOT
      annotations:
        app.quarkus.io/build-timestamp: '2020-08-15 - 18:21:59 +0000'
        app.quarkus.io/commit-id: 6e0cb83417ed81b4aff7d8a9148357ab2062df87
        app.quarkus.io/vcs-url: 'https://github.com/sebastienblanc/millionaire-backend.git'
    spec:
      containers:
        - name: millionaire-backend
          image: 'sebi2706/millionaire-backend:2.1'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: millionaire-backend
      serviceAccount: millionaire-backend
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 55
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-08-17T14:23:28Z'
      lastTransitionTime: '2020-08-16T06:02:49Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "millionaire-backend-65bd78d74d" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2020-08-18T08:26:15Z'
      lastTransitionTime: '2020-08-18T08:26:15Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
