src/kube/service.yml
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.quarkus.io/build-timestamp: '2020-08-15 - 18:21:59 +0000'
    app.quarkus.io/commit-id: 6e0cb83417ed81b4aff7d8a9148357ab2062df87
    app.quarkus.io/vcs-url: 'https://github.com/sebastienblanc/millionaire-backend.git'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"app.quarkus.io/build-timestamp":"2020-08-15
      - 18:21:59
      +0000","app.quarkus.io/commit-id":"6e0cb83417ed81b4aff7d8a9148357ab2062df87","app.quarkus.io/vcs-url":"https://github.com/sebastienblanc/millionaire-backend.git"},"labels":{"app.kubernetes.io/name":"millionaire-backend","app.kubernetes.io/version":"1.0-SNAPSHOT"},"name":"millionaire-backend","namespace":"thegame"},"spec":{"ports":[{"name":"http","port":8080,"targetPort":8080}],"selector":{"app.kubernetes.io/name":"millionaire-backend","app.kubernetes.io/version":"1.0-SNAPSHOT"},"type":"Clu [...]
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '1800'
  selfLink: /api/v1/namespaces/thegame/services/millionaire-backend
  resourceVersion: '3380718'
  name: millionaire-backend
  uid: d88f3c47-0ad3-40ff-a9df-ec5a823a647c
  creationTimestamp: '2020-08-16T06:02:48Z'
  namespace: thegame
  finalizers:
    - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/name: millionaire-backend
    app.kubernetes.io/version: 1.0-SNAPSHOT
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30123
  selector:
    app.kubernetes.io/name: millionaire-backend
    app.kubernetes.io/version: 1.0-SNAPSHOT
  clusterIP: 172.30.190.197
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
status:
  loadBalancer:
    ingress:
      - hostname: ad88f3c470ad340ffa9dfec5a823a647-880746671.eu-west-3.elb.amazonaws.com
